# streamlit-demo

./: requirements.txt
sample2/: streamlit_app.py
streamlit_app/: pyproject.toml  streamlit_app.py
streamlit_app/.streamlit/: config.toml
