[tool.poetry]
name = "civis-streamlit-demo"
version = "0.2.0"
description = ""
authors = ["Saranga Komanduri <skomanduri@civisanalytics.com>"]

[tool.poetry.dependencies]
python = "~3.7.6"
streamlit = "^0.80.0"
civis = "^1.15.1"
pydeck = "^0.6.2"
pandas = "^1.2.4"
numpy = "^1.20.2"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
watchdog = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
